--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
     "chart.js": "^4.1.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^4.3.1",
     "react-custom-scroll": "^4.4.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
